--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+body {
   overflow-x: hidden;
 }
 :root {
-  
 }
 .btn-banner-group {
   position: absolute;
@@ -24,25 +23,60 @@ body{
   left: 0;
   right: 0;
 }
-.btn-banner-group ul li{
+.btn-banner-group ul li {
   transition: all 0.5s ease-in-out;
 }
-.btn-banner-active{
-  background-color: #FD853A;
-  width:208px !important;
+.btn-banner-active {
+  background-color: #fd853a;
+  width: 208px !important;
   border-radius: 60px;
 }
-.btn-banner-group ul li span{
+.btn-banner-group ul li span {
   font-size: 24px;
   line-height: 33px;
-  font-weight: 300 ;
+  font-weight: 300;
 }
 .btn-banner-group ul li span.btn-banner-act {
   font-size: 26px;
   line-height: 33px;
-  font-weight: 400 ;
+  font-weight: 400;
 }
-.btn-banner{
-  width:129px;
+.btn-banner {
+  width: 129px;
 }
 /* slider for my services start */
+.services-card {
+  max-width: 416px;
+  width: 100%;
+  height: 506px;
+  position: relative;
+}
+.services-card-heading {
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-top-right-radius: 50px;
+  border-top-left-radius: 50px;
+  /* background-image: radial-gradient(
+    87.42% 50% at 50% 50%,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.5) 100%
+  ); */
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background: rgba(255, 255, 255, 0.2);
+}
+.services-card-mid{
+  height: 95px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background: rgba(255, 255, 255, 0.2);
+  border-left: 2px solid rgba(255, 255, 255, 0.5);
+  border-right: 2px solid rgba(255, 255, 255, 0.5);
+
+}
+.services-card-img-link{
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  position: absolute;
+  top:26%;
+  
+}
