--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,7 @@ body {
   position: relative;
   cursor: pointer;
 }
+
 .services-card:hover .services-card-heading,
 .services-card:hover .services-card-mid,
 .services-card:hover .my-services-btn {
@@ -144,4 +145,29 @@ body {
   100% {
     transform: translateX(-50%);
   }
+}
+.myblogs-card {
+  max-width: 416px;
+  width: 100%;
+  height: 699px;
+  position: relative;
+  cursor: pointer;
+}
+.myblogs-card-img-link {
+  border-bottom-right-radius: 50px;
+  border-bottom-left-radius: 50px;
+  height: 432px;
+}
+.myblogs-ul li {
+  position: relative;
+  padding-left: 20px; 
+}
+
+.myblogs-ul li::before {
+  content: '•';
+  position: absolute;
+  left: 0;
+  color: #FD853A; 
+  font-size: 20px;
+  line-height: 24px;
 }
