--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,8 @@ body {
   cursor: pointer;
 }
 .services-card:hover .services-card-heading,
-.services-card:hover .services-card-mid, .services-card:hover .my-services-btn  {
+.services-card:hover .services-card-mid,
+.services-card:hover .my-services-btn {
   background-color: #fd853a;
 }
 .services-card-heading {
@@ -75,7 +76,7 @@ body {
   border-right: 2px solid rgba(255, 255, 255, 0.5);
   transition: background-color 0.5s ease-in-out;
 }
-.my-services-btn{
+.my-services-btn {
   transition: background-color 0.5s ease-in-out;
 }
 .services-card-img-link {
@@ -89,18 +90,56 @@ body {
 }
 .my-services-swiper .swiper-pagination .swiper-pagination-bullet {
   transition: all 0.6s ease-in-out;
-  background-color: #e4e7ec;
+  background-color: #f2f4f7;
   width: 10px;
   height: 10px;
 }
 
-.my-services-swiper .swiper-pagination .swiper-pagination-bullet-active {
+.my-services-swiper .swiper-pagination .swiper-pagination-bullet-active,
+.my-portfolio-swiper .swiper-pagination .swiper-pagination-bullet-active {
   width: 35px;
   height: 10px;
   padding: 0;
   border-radius: 8px;
-  background-color: #fd853a;
+  background-color: #fd853a !important;
 }
+.my-portfolio-swiper .swiper-pagination .swiper-pagination-bullet {
+  background-color: black;
+}
+
+.portfolio-card::-webkit-scrollbar{
+    width: 0px;
+    
+  
+}
+.portfolio-card-hover {
+  overflow: auto;
+  animation: scrollAnimation 10s linear infinite;
+}
+
+@keyframes scrollAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+  /* content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  background: linear-gradient(0deg, #ffffff, #ffffff),
+    linear-gradient(
+      207.19deg,
+      rgba(0, 0, 0, 0) 47.41%,
+      rgba(0, 0, 0, 0.359679) 76.39%,
+      rgba(0, 0, 0, 0.5) 89.23%
+    ); */
+
+
 /* .my-services-swiper .swiper-pagination {
   bottom: -5px !important;
 } */
