--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -209,3 +209,17 @@ body {
   font-size: 20px;
   line-height: 24px;
 }
+.testimonial-card{
+  max-width: 784px;
+  width: 100%;
+  height: 265px;
+  position: relative;
+  border-radius: 24px;
+  padding: 21px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background: rgba(255, 255, 255, 0.2);
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
